background repeat issue corrected

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       * {
         font-family: "Playfair Display", serif;
       }
+      @media (max-width: 768px) {
+        body {
+          background-repeat: no-repeat !important;
+        }
+      }
       body {
         background-image: url("./media/bg-map.gif");
         background-size: cover;
