rectified background repeat issue

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         background-image: url("./media/bg-map.gif");
         background-size: cover;
         overflow-x: hidden;
+        min-height: 100vh;
       }
       .country-card,
       .searchBox {
