change in background position

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       body {
         background-image: url("./media/bg-map.gif");
         background-size: cover;
+        background-position: center;
         overflow-x: hidden;
         min-height: 100vh;
       }
